fix spacing bugherd-task#62

--- a/app/assets/stylesheets/catarse_bootstrap/_main.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/_main.sass
@@ -720,7 +720,7 @@ input.text-field-half
     font-size: 16px
     font-weight: 600
   .permalink-input
-    padding-left: 122px
+    padding-left: 126px
   .goal-input
     padding-left: 33px
 
